--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
 
      
-<div class="container-fluid bg-#f0ad4e">
+<div class="container-fluid bg-#f0ad4e mt-5">
   <div class="container">
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner w-100">
